[metadata]
name = tweetstack
version = 0.1.0
summary = Twitter and OpenStack Integration example.
download_url = UNKNOWN
author = Takahiro Shida
author_email = shida.takahiro@gmail.com
classifier = License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License

[files]
